fixed namespacing issues

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -26,7 +26,7 @@ a {
   top:52px;
 }
 
-#userNoteDisplayed {
+#userNote {
   position: absolute;
   width: 35px;
   left:140px;
@@ -38,7 +38,7 @@ a {
   -moz-transition: 1s;
   -ms-transition: 1s;
   -o-transition: 1s;
-  transition: 0.5s;
+  transition: 0.3s;
   /*margin-left: 50% !important;*/
 }
 
@@ -46,4 +46,29 @@ a {
   border: 1px solid grey;
   border-radius: 5px;
   text-align:center;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+.shake {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
